# leds-ia-resumoPDF

./: README.md  requirements.txt
.github/workflows/: python-app.yml  sonar-project.properties
data/outputs/: Classificação-de-Arritmias-Cardíacas-através-de-Machine-Learning-aplicado-a-Sinais-de-Eletrocardiograma-(ECG)-com-Random-Forest.md  baixados.md
pdf_resumo_app/: README.md  pyproject.toml
pdf_resumo_app/data/outputs/: Classificação-de-Arritmias-Cardíacas-através-de-Machine-Learning-aplicado-a-Sinais-de-Eletrocardiograma-(ECG)-com-Random-Forest.md  Relatório isquemia 1.md  baixados.md
pdf_resumo_app/leds-ia-resumoPDF/data/outputs/: Classificação-de-Arritmias-Cardíacas-através-de-Machine-Learning-aplicado-a-Sinais-de-Eletrocardiograma-(ECG)-com-Random-Forest.md  Relatório isquemia 1.md  baixados.md
pdf_resumo_app/src/pdf_resumo_app/: crew.py  main.py
pdf_resumo_app/src/pdf_resumo_app/config/: agents.yaml  tasks.yaml
pdf_resumo_app/src/pdf_resumo_app/tools/: pdf_text_reader.py
scripts/: __init__.py  crew.py  main.py
scripts/config/: agents.yaml  tasks.yaml
scripts/tools/: reader_tool.py
